Fix Footer Problem according to https://stackoverflow.com/questions/34250019/footer-semantic-ui

--- a/booking/static/booking/css/style.css
+++ b/booking/static/booking/css/style.css
@@ -10,8 +10,23 @@
     width: 40%;
 }
 
+/* Footer Solution found at https://stackoverflow.com/questions/34250019/footer-semantic-ui */
 
-/* TODO */
+.my-main-style {min-height:100%; 
+    padding-bottom:60px; 
+    box-sizing:border-box;
+}
+
+.my-footer-style {
+    background-color: #212121;
+    position: absolute;
+    margin-top: -50px;
+    left: 0;
+    width: 100%;
+    padding: 15px 0;
+}
+
+/* TODO #homepage */
 @media only screen and (min-width: 600px)  {
     #homepage {
         height: 70vh;
